@@ -1,3 +1,7 @@
+2010-05-29  Herbert Xu <herbert@gondor.apana.org.au>
+
+	* Continue after EINTR in read(1) with no pending signals.
+
 2010-05-27  Herbert Xu <herbert@gondor.apana.org.au>
 
 	* Fix wait regression where it does not wait for all jobs.
